syntax = "proto3";

// package context defines different context types that hold information 
// about the place at which an event occurs or where content should be 
// stored in and retrieved from.
package context;

// A Section is the highest level and just has the name of the section.
message Section {
	string name = 1;
}

// A Thread is inside of a section and has a thread identifier unique to
// that section.
message Thread {
	Section section_ctx = 1;
	string id = 2;
}

// A Comment is inside of a thread and has a comment identifier unique to
// that thread.
message Comment {
	Thread thread_ctx = 1;
	string id = 2;
}

// A Subcomment is inside of a comment and has a subcomment identifier
// unique to that comment.
message Subcomment {
	Comment comment_ctx = 1;
	string id = 2;
}
